tests/derive/snapshots/tests__derive__label__label_string_source.snap
---
source: tests/derive/label.rs
expression: "render(Foo { source, span: 13..17, })"
---
× error: foo
   ╭───────────
 1 │ fn main() -> void {
   │              ^^^^ label here
 2 │     return 0;
   ╰──
