tests/derive/snapshots/tests__derive__label__single_label.snap
---
source: tests/derive/label.rs
expression: "render(Foo { source, span: 13..17 })"
---
× error: foo
   ╭─[some_file.lm:1:14]
 1 │ fn main() -> void {
   │              ^^^^ label here
 2 │     return 0;
   ╰──
